Fixed spacing between tags, fixed play again link not working.

--- a/static/cr.css
+++ b/static/cr.css
@@ -42,6 +42,10 @@ h2 {
   border: 1px solid;
 }
 
+#comment-tags span {
+  margin-right: 1em;
+}
+
 #options {
 
 }
